kubernetes/tfaas/tfaas.yaml
kind: Service
apiVersion: v1
metadata:
  name: tfaas
spec:
  selector:
    app: tfaas
  ports:
    - port: 8083
      targetPort: 8083
      name: tfaas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tfaas
  name: tfaas
spec:
  selector:
    matchLabels:
      app: tfaas
  replicas: 1
  template:
    metadata:
      labels:
        app: tfaas
    spec:
      containers:
      #- image: cmssw/tfaas:v01.01.05
      - image: cmssw/tfaas:v01.01.06
        name: tfaas
        ports:
        - containerPort: 8083
          protocol: TCP
          name: tfaas
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          readOnly: true
        - name: models
          mountPath: /data/models
      volumes:
      - name: secrets
        secret:
          secretName: tfaas-secrets
      - name: models
        persistentVolumeClaim:
          claimName: models-claim
