kubernetes/tfaas/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tfaas-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "http"
spec:
  rules:
  - host: tfaas.web.cern.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: tfaas
          servicePort: 8083
